--- a/Huddle.MetricWebApp/Views/Shared/_Layout.cshtml
+++ b/Huddle.MetricWebApp/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
 </head>
 <body>
     <div class="container body-content">
+        <span>Test!</span>
         @RenderBody()
     </div>
     @Scripts.Render("~/bundles/jquery")
